// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input basic 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="Inputstory__PageLayout-skdy5l-0 zLidY"
    >
      <div
        class="inputWrapperstyle__InputStyles-sc-1pduhqy-0 ghDlDm"
      >
        <span
          class="label"
        >
          First name
        </span>
        <label
          class=""
          for="name"
          id="name"
        >
          <input
            class=""
            id="name"
            name="default"
            placeholder="Please add your name"
            type=""
          />
        </label>
      </div>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Input
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            basic
          </h2>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;ForwardRef
                  </span>
                  <span />
                  <span
                    style="color:#444"
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;StyledComponent
                    </span>
                    <span>
                      <span>
                         
                        <span>
                          forwardedComponent
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#666"
                            >
                              {
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  $$typeof
                                </span>
                              </span>
                              : 
                              <span>
                                …
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  render
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#170"
                              >
                                anonymous
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  attrs
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#666"
                              >
                                []
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                …
                              </span>
                              <span>
                                <br />
                                  
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          forwardedRef
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#444"
                            >
                              null
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;Input
                    </span>
                    <span>
                      <span>
                         
                        <span>
                          id
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              name
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          placeholder
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              Please add your name
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          label
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              First name
                            </span>
                            "
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      /&gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;/StyledComponent&gt;
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;/ForwardRef&gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Input" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    id
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    name
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      default
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    type
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    placeholder
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    label
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    defaultValue
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    iconName
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "StyledComponent" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input default value 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="Inputstory__PageLayout-skdy5l-0 zLidY"
    >
      <div
        class="inputWrapperstyle__InputStyles-sc-1pduhqy-0 ghDlDm"
      >
        <span
          class="label"
        >
          Your name
        </span>
        <label
          class=""
          for="name"
          id="name"
        >
          <input
            class=""
            id="name"
            name="default"
            placeholder="Enter your name"
            type=""
            value="John Doe"
          />
        </label>
      </div>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Input
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            default value
          </h2>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;ForwardRef
                  </span>
                  <span />
                  <span
                    style="color:#444"
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;StyledComponent
                    </span>
                    <span>
                      <span>
                         
                        <span>
                          forwardedComponent
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#666"
                            >
                              {
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  $$typeof
                                </span>
                              </span>
                              : 
                              <span>
                                …
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  render
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#170"
                              >
                                anonymous
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  attrs
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#666"
                              >
                                []
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                …
                              </span>
                              <span>
                                <br />
                                  
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          forwardedRef
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#444"
                            >
                              null
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;Input
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          placeholder
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              Enter your name
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          label
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              Your name
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          id
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              name
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          defaultValue
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              John Doe
                            </span>
                            "
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      /&gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;/StyledComponent&gt;
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;/ForwardRef&gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Input" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    id
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    name
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      default
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    type
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    placeholder
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    label
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    defaultValue
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    iconName
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "StyledComponent" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input icon left 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="Inputstory__PageLayout-skdy5l-0 zLidY"
    >
      <div
        class="inputWrapperstyle__InputStyles-sc-1pduhqy-0 ghDlDm"
      >
        <span
          class="label"
        >
          Email
        </span>
        <label
          class=""
          for="email"
          id="email"
        >
          <div
            class="icon-left"
          >
            <div
              class="Icon__Icons-pmfh88-0 bqaPQj"
            >
              <i>
                
              </i>
            </div>
          </div>
          <input
            class="icon-padding "
            id="email"
            name="default"
            placeholder="Email"
            type="text"
          />
        </label>
      </div>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Input
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            icon left
          </h2>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;ForwardRef
                  </span>
                  <span />
                  <span
                    style="color:#444"
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;StyledComponent
                    </span>
                    <span>
                      <span>
                         
                        <span>
                          forwardedComponent
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#666"
                            >
                              {
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  $$typeof
                                </span>
                              </span>
                              : 
                              <span>
                                …
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  render
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#170"
                              >
                                anonymous
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  attrs
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#666"
                              >
                                []
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                …
                              </span>
                              <span>
                                <br />
                                  
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          forwardedRef
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#444"
                            >
                              null
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;Input
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          iconName
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              email
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          id
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              email
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          placeholder
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              Email
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          label
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              Email
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span>
                          type
                        </span>
                        <span>
                          =
                          <span>
                            "
                            <span
                              style="color:#22a;word-break:break-word"
                            >
                              text
                            </span>
                            "
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      /&gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;/StyledComponent&gt;
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;/ForwardRef&gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Input" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    id
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    name
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      default
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    type
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    placeholder
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    label
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    defaultValue
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    iconName
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "StyledComponent" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
